Closed Bug 1023075 Opened 10 years ago Closed 10 years ago

Fix more clang warnings in webrtc/signaling

Categories

(Core :: WebRTC: Signaling, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33
Tracking Status
firefox32 --- wontfix
firefox33 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

media/webrtc/signaling/src/common/browser_logging/WebRtcLog.cpp:36:22 [-Wunused-variable] unused variable 'log'
media/webrtc/signaling/src/media-conduit/CodecStatistics.cpp:140:69 [-Wformat] format specifies type 'double' but the argument has type 'uint32_t' (aka 'unsigned int')
media/webrtc/signaling/src/media-conduit/CodecStatistics.h:103:12 [-Wunused-private-field] private field 'mRecoveredBeforeLoss' is not used
media/webrtc/signaling/src/media-conduit/CodecStatistics.h:104:12 [-Wunused-private-field] private field 'mRecoveredLosses' is not used
media/webrtc/signaling/src/peerconnection/PeerConnectionImpl.cpp:2049:11 [-Wswitch] enumeration value 'EndGuard_' not handled in switch
media/webrtc/signaling/src/peerconnection/PeerConnectionImpl.cpp:2102:11 [-Wswitch] enumeration value 'EndGuard_' not handled in switch
Attachment #8437449 - Flags: review?(rjesup)
Comment on attachment 8437449 [details] [diff] [review]
webrtc-signaling-warnings.patch

Review of attachment 8437449 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks!
Attachment #8437449 - Flags: review?(rjesup) → review+
https://hg.mozilla.org/mozilla-central/rev/c60592b72b1e
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: