Bug 1023075 - Fix more clang warnings in webrtc/signaling. r=jesup